--- a/03/ex03/CMakeLists.txt
+++ b/03/ex03/CMakeLists.txt
@@ -5,11 +5,14 @@ set(CMAKE_CXX_STANDARD 98)
 
 include_directories(.)
 
-add_executable(ex02
+add_executable(ex03
         FragTrap.cpp
         FragTrap.hpp
         main.cpp
         ScavTrap.cpp
         ScavTrap.hpp
+        ClapTrap.hpp
         ClapTrap.cpp
-        ClapTrap.hpp)
+        NinjaTrap.cpp
+        NinjaTrap.hpp
+        )
