ok day 03 ex03 and refact 02 01 00 exs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ add_executable(DAY03EX00 03/ex00/main.cpp 03/ex00/FragTrap.cpp 03/ex00/FragTrap.
 add_executable(DAY03EX01 03/ex01/main.cpp 03/ex01/FragTrap.cpp 03/ex01/FragTrap.hpp 03/ex01/ScavTrap.cpp 03/ex01/ScavTrap.hpp)
 
 add_executable(CppModule
-        main.cpp)
+        main.cpp 03/ex03/Hgjghjgh.cpp 03/ex03/Hgjghjgh.hpp 03/ex03/Gfhfghfgh.cpp 03/ex03/Gfhfghfgh.hpp)
