ok day 06 ex 02

--- a/06/ex02/Makefile
+++ b/06/ex02/Makefile
@@ -10,9 +10,9 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME =	Serialization
+NAME =	IdentifyRealType
 
-SRC =		main.cpp
+SRC =		main.cpp Base.cpp A.cpp B.cpp C.cpp
 
 FLAGS =		-Wall -Wextra -Werror
 
