--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,12 @@ add_executable(d07e00
         07/ex00/whatever.hpp)
 
 add_executable(d07e01
-        07/ex01/main.cpp 07/ex01/iter.hpp)
+        07/ex01/main.cpp
+        07/ex01/iter.hpp)
+
+add_executable(d07e02
+        07/ex02/main.cpp
+        07/ex02/Array.tpp)
 
 add_executable(CppModule main.cpp
                 )
