--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(CppModule)
 
 set(CMAKE_CXX_STANDARD 98)
-set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra" )
+#set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -std=c++98" )
 
 add_executable(DAY03 03/exp.cpp)
 
@@ -102,6 +102,10 @@ add_executable(d07e02
 add_executable(d08e00
         08/ex00/main.cpp
         08/ex00/easyfind.hpp)
+
+add_executable(d08e01
+        08/ex01/main.cpp
+        08/ex01/Span.cpp 08/ex01/Span.hpp)
 
 add_executable(CppModule main.cpp
                 )
