--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(CppModule)
 
 set(CMAKE_CXX_STANDARD 98)
-set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -std=c++98" )
+#set(CMAKE_CXX_FLAGS "-Wall -Werror -Wextra -std=c++98" )
 
 add_executable(DAY03 03/exp.cpp)
 
@@ -106,6 +106,12 @@ add_executable(d08e00
 add_executable(d08e01
         08/ex01/main.cpp
         08/ex01/Span.cpp 08/ex01/Span.hpp)
+
+add_executable(d08e02
+        08/ex02/main.cpp
+        08/ex02/MutantStack.cpp
+        08/ex02/MutantStack.hpp
+        )
 
 add_executable(CppModule main.cpp
                 )
